# openstack-exporter-operator

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Justfile  LICENSE  Makefile  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml  requirements.txt  review.sh  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: _check_file_update.yaml  _quality_check.yaml  _release.yaml  check.yaml  promote.yaml  pull-request.yaml  release-to-edge.yaml  release.yaml  sync-from-sunbeam.yaml  update_file.yaml
charms/openstack-exporter-k8s/: LICENSE  charmcraft.yaml  metadata.yaml  requirements.txt
charms/openstack-exporter-k8s/tests/unit/: __init__.py  test_os_exporter.py
scripts/: check-dashboard-updates.sh  pull_dashboard_and_alert_rules.sh  sync-dashboards  sync-dashboards-and-alert-rules.sh  sync-from-sunbeam.sh  sync_sunbeam.sh  update-charm-libs.sh
src/: charm.py  config.py  exception.py  service.py  ssdlc.py  validate_config.py
src/grafana_dashboards/: cloud.json  compute.json  hypervisor-openstack-exporter-dashboard.json  openstack-exporter.json  overview-openstack-exporter-dashboard.json  project.json  service.json
src/prometheus_alert_rules/: cinder_rules.yaml  general.yaml  neutron_rules.yaml  nova_compute.yaml  octavia_rules.yaml
sunbeam/charms/openstack-exporter-k8s/: README.md  config.yaml  rebuild
sunbeam/charms/openstack-exporter-k8s/src/: charm.py
sunbeam/charms/openstack-exporter-k8s/src/grafana_dashboards/: compute.json
sunbeam/charms/openstack-exporter-k8s/src/prometheus_alert_rules/: cinder_rules.yaml
sunbeam/charms/openstack-exporter-k8s/src/templates/: clouds.yaml.j2
sunbeam/charms/openstack-exporter-k8s/tests/unit/: test_os_exporter.py
tests/functional/: requirements.txt
tests/functional/tests/: tests.yaml
tests/functional/tests/bundles/: jammy-yoga.yaml  noble-caracal.yaml
tests/functional/tests/bundles/overlays/: noble-caracal.yaml.j2
tests/functional/tests/charm_tests/: openstack_exporter.py  setup.py
tests/integration/: requirements.txt  test_charm.py  tests.yaml
tests/integration/bundles/: jammy.yaml
tests/integration/charm_tests/: openstack_exporter.py
tests/integration/tests/: tests.yaml
tests/integration/tests/bundles/: jammy-yoga.yaml  jammy.yaml
tests/integration/tests/bundles/overlays/: jammy-yoga.yaml.j2  local-charm-overlay.yaml.j2
tests/integration/tests/charm_tests/: openstack_exporter.py  setup.py
tests/unit/: requirements.txt  test_charm.py  test_service.py  test_ssdlc.py  test_validate_config.py
