[project]
name = "openstack-exporter-operator"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "cosl",
    "ops ~= 2.5",
    "pydantic < 2",
    "pyyaml ~= 6.0",
]

[tool.uv]
package = false

[dependency-groups]
unit = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
func = [
    "python-openstackclient",
    "pytest",
    "pytest-cov",
    "pytest-operator",
    "zaza @ git+https://github.com/openstack-charmers/zaza.git@master",
    "zaza-openstack @ git+https://github.com/openstack-charmers/zaza-openstack-tests.git",
]
lint = [
    "ruff",
    "mypy",
    "codespell",
]
reformat = ["ruff"]
tics = ["coverage[toml]"]

[tool.ruff]
line-length = 99
preview = true
exclude = [
    ".eggs",
    ".git",
    ".tox",
    ".venv",
    ".build",
    "build",
    "lib",
    "report",
    "docs",
    "mod",
    "hooks/charmhelpers",
    "tests/charmhelpers",
]

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "N", "D", "I", "CPY"]
ignore = [
    "E501",   # line too long — handled by formatter
    "D107",   # missing docstring in __init__
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "D415",   # first line punctuation
    "N818",   # exception name without 'Error'
    "D100", "D101", "D102", "D103",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+Canonical Ltd\\."
min-file-size = 1

[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_namespace_packages = true
exclude = [".eggs", ".git", ".tox", ".venv", ".build", "lib", "report", "tests", "docs", "mod", "hooks/charmhelpers", "tests/charmhelpers"]

[tool.codespell]
skip = ".eggs,.tox,.git,.venv,venv,build,.build,lib,report,docs,htmlcov,mod,hooks/charmhelpers,tests/charmhelpers,uv.lock"
quiet-level = 3
check-filenames = true
ignore-words-list = "assertIn"

[tool.coverage.run]
relative_files = true
source = ["."]
omit = ["tests/**", "docs/**", "lib/**", "snap/**", "build/**", "setup.py", "mod/**", "hooks/charmhelpers/**", "tests/charmhelpers/**"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.html]
directory = "tests/report/html"

[tool.coverage.xml]
output = "tests/report/coverage.xml"
